[gd_scene load_steps=13 format=3 uid="uid://conub1conbtgi"]

[ext_resource type="Script" path="res://GnomeNode.gd" id="1_b37bj"]
[ext_resource type="Script" path="res://GnomeBody.gd" id="2_afq6b"]
[ext_resource type="PackedScene" uid="uid://dhg5kouplpxx0" path="res://Gnomeragdoll.tscn" id="2_dnbgt"]
[ext_resource type="Texture2D" uid="uid://deji0yq7u8tkw" path="res://gnomesheet.png" id="2_ygao4"]
[ext_resource type="PackedScene" uid="uid://p57sb4vs7esh" path="res://LevelTimer.tscn" id="4_3tb2l"]
[ext_resource type="Texture2D" uid="uid://c02x0y2b4xc13" path="res://YouDidIt.png" id="5_weisf"]
[ext_resource type="Texture2D" uid="uid://drwm8rdu2l45h" path="res://NewBest.png" id="6_cdp8s"]
[ext_resource type="AudioStream" uid="uid://du6hgcdbgnoii" path="res://Audio/CoinCollected.wav" id="8_fdd31"]
[ext_resource type="AudioStream" uid="uid://yo34o50hn3dh" path="res://Music/GnomingHamOutskirts.wav" id="9_51inj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_41exo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5bsv"]
size = Vector2(21, 12.9645)

[sub_resource type="CircleShape2D" id="CircleShape2D_mpuvl"]
radius = 6.5192

[node name="GnomeNode" type="Node2D"]
script = ExtResource("1_b37bj")

[node name="GnomeBody" type="RigidBody2D" parent="." groups=["Player"]]
linear_damp = 0.002
script = ExtResource("2_afq6b")

[node name="Torso" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-67, -8)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(48.8125, 1.75, 48.625, 14.6875, 64.5625, 14.625, 64.3125, 1.4375)
uv = PackedVector2Array(48.8125, 1.75, 48.625, 14.6875, 64.5625, 14.625, 64.3125, 1.4375)
bones = ["GnomeBody", PackedFloat32Array(1, 1, 1, 1), "BikeBodyBone", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone/WheelRBone", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone/WheelLBone", PackedFloat32Array(0, 0, 0, 0)]

[node name="LegL" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-52, -45)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(32.5301, 48.494, 43.9759, 48.5944, 43.8755, 64.257, 33.2329, 64.1566)
uv = PackedVector2Array(32.5301, 48.494, 43.9759, 48.5944, 43.8755, 64.257, 33.2329, 64.1566)

[node name="Head" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-17, -24)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(10, -2, -2.3125, -1.5625, 0, 10, 0, 22, 13.25, 21.875, 13.125, -1.6875)
uv = PackedVector2Array(10, -2, -2.3125, -1.5625, 0, 10, 0, 22, 13.25, 21.875, 13.125, -1.6875)

[node name="LegR" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-46, -45)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(32.5301, 48.494, 43.9759, 48.5944, 43.8755, 64.257, 33.2329, 64.1566)
uv = PackedVector2Array(32.5301, 48.494, 43.9759, 48.5944, 43.8755, 64.257, 33.2329, 64.1566)

[node name="ArmR" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-21, -17)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(14.3125, 11, 27.9375, 10.9375, 27.875, 20.4375, 14.5, 20.4375)
uv = PackedVector2Array(14.3125, 11, 27.9375, 10.9375, 27.875, 20.4375, 14.5, 20.4375)

[node name="ArmL" type="Polygon2D" parent="GnomeBody" groups=["BodyPart"]]
texture_filter = 1
position = Vector2(-36, -3)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(15.25, 10.3125, 15.25, -0.9375, 41.375, -1, 41.3125, 10.6875)
uv = PackedVector2Array(15.25, 10.3125, 15.25, -0.9375, 41.375, -1, 41.3125, 10.6875)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GnomeBody"]
position = Vector2(-11, -8)
shape = SubResource("CapsuleShape2D_41exo")

[node name="GnomePinJoint1" type="PinJoint2D" parent="GnomeBody"]
position = Vector2(-10, 7)
node_a = NodePath("..")
node_b = NodePath("../../BikeBody")
softness = 0.25

[node name="Camera2D" type="Camera2D" parent="GnomeBody"]
position = Vector2(0, -1)
zoom = Vector2(5, 5)

[node name="BonkCheck" type="RayCast2D" parent="GnomeBody"]
position = Vector2(-11, -16)
target_position = Vector2(0, -15)

[node name="GnomePinJoint2" type="PinJoint2D" parent="GnomeBody"]
position = Vector2(0, 5)
node_a = NodePath("..")
node_b = NodePath("../../BikeBody")
softness = 0.25

[node name="CanvasLayer" type="CanvasLayer" parent="GnomeBody"]

[node name="Control" type="Control" parent="GnomeBody/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -96.0
offset_top = -55.0
offset_right = 95.0
offset_bottom = 52.0

[node name="YouLose" type="Label" parent="GnomeBody/CanvasLayer/Control"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 454.0
offset_top = 238.0
offset_right = 807.0
offset_bottom = 468.0
theme_override_font_sizes/font_size = 50
text = "You fell off

Press R to retry"
horizontal_alignment = 1

[node name="Label" type="Label" parent="GnomeBody/CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 205.0
offset_top = 178.0
offset_right = 245.0
offset_bottom = 201.0
text = "Score : 0"

[node name="TimerLabel" parent="GnomeBody/CanvasLayer/Control" instance=ExtResource("4_3tb2l")]
layout_mode = 0
offset_left = 890.0
offset_top = 59.0
offset_right = 1425.0
offset_bottom = 172.0

[node name="BestTimeIcon" type="TextureRect" parent="GnomeBody/CanvasLayer/Control"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 4.026
anchor_top = 5.486
anchor_right = 4.026
anchor_bottom = 5.486
offset_left = 0.0339966
offset_top = -0.00201416
offset_right = 1920.03
offset_bottom = 1080.0
rotation = -0.212819
scale = Vector2(0.123062, 0.129852)
texture = ExtResource("6_cdp8s")
expand_mode = 1

[node name="YouDidIt" type="TextureRect" parent="GnomeBody/CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 3.969
anchor_top = 4.15
anchor_right = 3.969
anchor_bottom = 4.15
offset_left = -0.0790405
offset_top = -0.0500183
offset_right = 452.921
offset_bottom = 373.95
texture = ExtResource("5_weisf")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GnomeBody/CanvasLayer/Control/YouDidIt"]
layout_mode = 0
offset_left = 139.0
offset_top = 198.0
offset_right = 333.0
offset_bottom = 361.0

[node name="BestTimeLabel" type="Label" parent="GnomeBody/CanvasLayer/Control/YouDidIt/VBoxContainer"]
layout_mode = 2
text = "Your best time :"

[node name="MapScreenButton" type="Button" parent="GnomeBody/CanvasLayer/Control/YouDidIt/VBoxContainer"]
layout_mode = 2
text = "Go to Map Screen"

[node name="TryAgainButton" type="Button" parent="GnomeBody/CanvasLayer/Control/YouDidIt/VBoxContainer"]
layout_mode = 2
text = "Try again?"

[node name="Paused" type="Label" parent="GnomeBody/CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 804.0
offset_top = 227.0
offset_right = 1156.0
offset_bottom = 367.0
theme_override_font_sizes/font_size = 100
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="GnomeBody/CanvasLayer/Control/Paused"]
layout_mode = 0
offset_left = -114.0
offset_top = 593.0
offset_right = 466.0
offset_bottom = 874.0

[node name="UnpauseButton" type="Button" parent="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Continue"

[node name="BackToMapScreen" type="Button" parent="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Back to Map Screen"

[node name="QuitGame" type="Button" parent="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit Game"

[node name="GnomeRagdoll" parent="GnomeBody" instance=ExtResource("2_dnbgt")]
visible = false
position = Vector2(-17, -37)

[node name="BikeBody" type="RigidBody2D" parent="."]
mass = 1.5

[node name="BikeBody" type="Polygon2D" parent="BikeBody"]
texture_filter = 1
position = Vector2(-20, -24)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(-4.38757, 21.6636, 14.9164, 21.6636, 27.9707, 21.6636, 28.0622, 44.6984, -5.21024, 44.8812, -5.11883, 21.5722)
uv = PackedVector2Array(-4.38757, 21.6636, 14.9164, 21.6636, 27.9707, 21.6636, 28.0622, 44.6984, -5.21024, 44.8812, -5.11883, 21.5722)
bones = ["GnomeBody", PackedFloat32Array(0, 0, 0, 0, 0, 0), "BikeBodyBone", PackedFloat32Array(1, 1, 1, 1, 1, 1), "BikeBodyBone/WheelRBone", PackedFloat32Array(0, 0, 0, 0, 0, 0), "BikeBodyBone/WheelLBone", PackedFloat32Array(0, 0, 0, 0, 0, 0)]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BikeBody"]
position = Vector2(-8.94376, 13.5147)
rotation = -0.108832
shape = SubResource("RectangleShape2D_w5bsv")

[node name="JumpCheck" type="RayCast2D" parent="BikeBody"]
position = Vector2(-10, -1)
target_position = Vector2(0, 30)

[node name="PinJoint2D" type="PinJoint2D" parent="BikeBody"]
position = Vector2(-24.5, 18.5)
node_a = NodePath("..")
node_b = NodePath("WheelBodyL")
softness = 0.5

[node name="WheelBodyL" type="RigidBody2D" parent="BikeBody/PinJoint2D" groups=["Wheel"]]
position = Vector2(31, -1)
mass = 0.5

[node name="WheelL" type="Polygon2D" parent="BikeBody/PinJoint2D/WheelBodyL"]
texture_filter = 1
position = Vector2(-87.5, -38.5)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(48.1482, 31.6705, 67.0446, 31.6705, 67.1202, 49.0552, 48.0726, 49.0552)
uv = PackedVector2Array(48.1482, 31.6705, 67.0446, 31.6705, 67.1202, 49.0552, 48.0726, 49.0552)
bones = ["GnomeBody", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone/WheelRBone", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone/WheelLBone", PackedFloat32Array(1, 1, 1, 1)]

[node name="WheelLCollison" type="CollisionShape2D" parent="BikeBody/PinJoint2D/WheelBodyL"]
position = Vector2(-31, 1)
shape = SubResource("CircleShape2D_mpuvl")

[node name="PinJoint2D2" type="PinJoint2D" parent="BikeBody"]
position = Vector2(6.5, 17.5)
node_a = NodePath("..")
node_b = NodePath("WheelBodyR")
softness = 1.0

[node name="WheelBodyR" type="RigidBody2D" parent="BikeBody/PinJoint2D2" groups=["Wheel"]]
position = Vector2(-6.5, -17.5)
mass = 0.5

[node name="WheelR" type="Polygon2D" parent="BikeBody/PinJoint2D2/WheelBodyR"]
texture_filter = 1
position = Vector2(-50, -22)
texture = ExtResource("2_ygao4")
polygon = PackedVector2Array(48.1482, 31.6705, 67.0446, 31.6705, 67.1202, 49.0552, 48.0726, 49.0552)
uv = PackedVector2Array(48.1482, 31.6705, 67.0446, 31.6705, 67.1202, 49.0552, 48.0726, 49.0552)
bones = ["GnomeBody", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone", PackedFloat32Array(0, 0, 0, 0), "BikeBodyBone/WheelRBone", PackedFloat32Array(1, 1, 1, 1), "BikeBodyBone/WheelLBone", PackedFloat32Array(0, 0, 0, 0)]

[node name="WheelRCollison" type="CollisionShape2D" parent="BikeBody/PinJoint2D2/WheelBodyR"]
position = Vector2(6.5, 17.5)
shape = SubResource("CircleShape2D_mpuvl")

[node name="LeftWheelPos" type="Node2D" parent="."]
position = Vector2(-24.5, 18.5)

[node name="RightWheelPos" type="Node2D" parent="."]
position = Vector2(6.5, 17.5)

[node name="SoundFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fdd31")

[node name="ThudNoise" type="AudioStreamPlayer" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_51inj")
volume_db = -13.0
autoplay = true

[connection signal="BeatLevel" from="GnomeBody" to="." method="_on_gnome_body_beat_level"]
[connection signal="CoinGrab" from="GnomeBody" to="." method="_on_gnome_body_coin_grab"]
[connection signal="Ihatesignals" from="GnomeBody" to="." method="_on_gnome_body_ihatesignals"]
[connection signal="PitfallFell" from="GnomeBody" to="." method="_on_gnome_body_pitfall_fell"]
[connection signal="StopTimerSignal" from="GnomeBody" to="." method="_on_gnome_body_stop_timer_signal"]
[connection signal="finishtime" from="GnomeBody/CanvasLayer/Control/TimerLabel" to="." method="_on_timer_label_finishtime"]
[connection signal="pressed" from="GnomeBody/CanvasLayer/Control/YouDidIt/VBoxContainer/MapScreenButton" to="." method="_on_map_screen_button_pressed"]
[connection signal="pressed" from="GnomeBody/CanvasLayer/Control/YouDidIt/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer/BackToMapScreen" to="." method="_on_back_to_map_screen_pressed"]
[connection signal="pressed" from="GnomeBody/CanvasLayer/Control/Paused/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="finished" from="BGMPlayer" to="." method="_on_bgm_player_finished"]
